--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -486,13 +486,14 @@
                                         <rect key="frame" x="0.0" y="53" width="400" height="800"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vnf-tN-mXz">
-                                                <frame key="frameInset" minX="13" minY="25" width="375" height="557"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vnf-tN-mXz">
+                                                <frame key="frameInset" minX="13" minY="25" width="338" height="557"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                             </textView>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -531,13 +532,13 @@
                                                     <action selector="tbUses:" destination="OiB-G1-D7m" id="jEe-ms-y9s"/>
                                                 </connections>
                                             </barButtonItem>
-                                            <barButtonItem title="Edit" id="cwi-xV-pcW" userLabel="Save">
+                                            <barButtonItem title="Edit" id="cwi-xV-pcW">
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <connections>
-                                                    <action selector="tbSave:" destination="OiB-G1-D7m" id="vXq-Fm-Qba"/>
+                                                    <action selector="tbEdit:" destination="OiB-G1-D7m" id="AZZ-4m-u7i"/>
                                                 </connections>
                                             </barButtonItem>
-                                            <barButtonItem width="55.5" style="plain" systemItem="fixedSpace" id="tJ8-rM-uAv"/>
+                                            <barButtonItem width="34.5" style="plain" systemItem="fixedSpace" id="tJ8-rM-uAv"/>
                                             <barButtonItem title="Close" id="Pf7-Of-vcS">
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <connections>
@@ -1368,7 +1369,7 @@
                                                 <size key="titleShadowOffset" width="1" height="1"/>
                                                 <state key="normal" title="Add"/>
                                                 <connections>
-                                                    <action selector="btnAddOil:" destination="mYW-fm-K7V" eventType="touchUpInside" id="9HS-hf-eSM"/>
+                                                    <action selector="btnAddOil:" destination="mYW-fm-K7V" eventType="touchUpInside" id="Nfi-b1-kIF"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -1454,7 +1455,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="400" height="800"/>
                     <connections>
-                        <outlet property="myTableView" destination="UUJ-5t-u19" id="A7n-ia-kM8"/>
+                        <outlet property="myTableView" destination="UUJ-5t-u19" id="eDp-a2-OtB"/>
                         <outlet property="txtDescription" destination="Nnj-gb-3PF" id="1Ke-xE-Tq9"/>
                         <outlet property="txtOilName" destination="K3U-MK-hGe" id="fCP-jU-hNy"/>
                         <outlet property="txtRemedy" destination="PQt-Zf-vKM" id="XFu-ew-utb"/>
